--- a/IOTP01 - Copy/IOTP01.html
+++ b/IOTP01 - Copy/IOTP01.html
@@ -393,11 +393,19 @@
             <p>Congratulations! You have successfully created and booted a Raspberry Pi single board computer.<br />
                 In the next series of assignments you will explore how to communicate with and control the Raspberry Pi from your laptop.
             </p>
+            <hr />
         </div>
 
 
 
 
+        <div class="col-lg-12 text-danger text-center">
+            <h2>-- -- WHEN DONE -- --<br />
+                SHUTDOWN THE RASPBERRY PI<br />
+                TURN OFF THE POWER<br />
+                REMOVE YOUR FLASH DRIVE
+            </h2>
+        </div>
         <hr />
 
 
