--- a/IOTP01/IOTP01.html
+++ b/IOTP01/IOTP01.html
@@ -24,7 +24,7 @@
 
         <input name="InstID" type="hidden" id="InstID" value="00617282">
 
-        <h1 class="text-center">Setting Up a Raspberry Pi</h1>
+        <h1 class="text-center">Setting Up a Single Board Computer</h1>
 
 
         <!-- -start-Student, class and assignment information. Assignment hard-coded, other values from constants.js file-start -->
@@ -94,20 +94,20 @@
 
 
             <p>
-                These instructions will show you how to download and create the operating system for a Raspberry Pi single-board computer (SBC); and then start up the device.<br />
+                These instructions will show you how to prepare the operating system for a Raspberry Pi single-board computer (SBC); boot and then configure the device.<br />
                 SBCs are becoming ubiquitous-examples are <a href="https://store.google.com/us/magazine/compare_thermostats?hl=en-US" class="bg-info text-white" target="_blank">Nest thermostats</a> and <a href="https://shop.ring.com/pages/doorbell-cameras" class="bg-info text-white" target="_blank">Ring doorbells</a>.<br />
                 These devices make up the Internet of Things-IoT, which is greatly impacting organizations and everyday life.<br />
-                In later assignments you will continue working with and experiencing the capabilities of the Raspberry Pi.
+                In later assignments you will continue experimenting with SBCs, microcontrollers, sensors, actuators and other networking devices to provide an understanding of the technology and the ability to synthesize novel solutions.
             </p>
             <p>After completing this assignment you will be able to:</p>
             <ol>
-                <li>Obtain latest Raspbian operating system</li>
-                <li>Create a bootable USB 3.0 flash drive containing the operating system</li>
-                <li>Boot the Raspberry Pi</li>
+                <li>Obtain latest operating system</li>
+                <li>Create bootable physical media containing the operating system</li>
+                <li>Boot the physical SBC</li>
                 <li>Connect to the WSU Guest wireless network</li>
-                <li>Configure the Raspberry Pi</li>
-                <li>Use a web browser and other software on the Raspberry Pi</li>
-                <li>Install an application on the Raspberry Pi to take screen shots</li>
+                <li>Configure the SBC </li>
+                <li>Use a web browser and other software on the SBC</li>
+                <li>Use an application on the SBC to take screen shots</li>
                 <li>Upload the screen shot to D2L.</li>
             </ol>
             <hr />
