reference Home Assistant

--- a/IOTP01/IOTP01.html
+++ b/IOTP01/IOTP01.html
@@ -95,7 +95,7 @@
 
             <p>
                 These instructions will show you how to prepare the operating system for a Raspberry Pi single-board computer (SBC); boot and then configure the device.<br />
-                SBCs are becoming ubiquitous-examples are <a href="https://store.google.com/us/magazine/compare_thermostats?hl=en-US" class="bg-info text-white" target="_blank">Nest thermostats</a> and <a href="https://shop.ring.com/pages/doorbell-cameras" class="bg-info text-white" target="_blank">Ring doorbells</a>.<br />
+                SBCs are becoming ubiquitous-examples are <a href="https://store.google.com/us/magazine/compare_thermostats?hl=en-US" class="bg-info text-white" target="_blank">Nest thermostats </a> , <a href="https://shop.ring.com/pages/doorbell-cameras" class="bg-info text-white" target="_blank">Ring doorbells</a>, and <a href="https://www.home-assistant.io/" class="bg-info text-white" target="_blank">Home Automation</a>.<br />
                 These devices make up the Internet of Things-IoT, which is greatly impacting organizations and everyday life.<br />
                 In later assignments you will continue experimenting with SBCs, microcontrollers, sensors, actuators and other networking devices to provide an understanding of the technology and the ability to synthesize novel solutions.
             </p>
@@ -108,7 +108,7 @@
                 <li>Configure the SBC </li>
                 <li>Use a web browser and other software on the SBC</li>
                 <li>Use an application on the SBC to take screen shots</li>
-                <li>Upload the screen shot to D2L.</li>
+                <li>Upload the screen shot to D2L</li>
             </ol>
             <hr />
         </div>
