corrected file name error

--- a/IOT07/IOT07.html
+++ b/IOT07/IOT07.html
@@ -160,7 +160,7 @@
 
                 <li>Install the world sample database by opening the Chromium browser on your RPi and typing the following into the address bar:<br />
                     <code>https://dev.mysql.com/doc/index-other.html</code><br />
-                    <a href="WorldDB_Gzip.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('WorldDB_GZip.PNG', 'popup'); return false;">
+                    <a href="WorldDB_Gzip.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('WorldDB_Gzip.PNG', 'popup'); return false;">
                         <img src="WorldDB_Gzip.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a> Download World Database<br />
                     <br />
                     Then click &#39;Gzip&#39;, which will download the world database to the&nbsp; &#39;/home/pi/Downloads&#39; folder.
